# react-native-nitro-speech-recognition

./: CLAUDE.md  nitro.json  package-lock.json  package.json  tsconfig.build.json  tsconfig.json
android/: CMakeLists.txt  build.gradle
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: cpp-adapter.cpp
android/src/main/java/com/margelo/nitro/speechrecognition/: HybridSpeechRecognition.kt
android/src/main/java/com/speechrecognition/: AudioRecorder.kt  DelayedFileStreamer.kt  SpeechRecognitionOptions.kt  SpeechService.kt
example/: App.tsx  app.config.js  app.json  index.js  package-lock.json  package.json
ios/: ExpoSpeechRecognizer.swift  HybridSpeechRecognition.swift  NitroSpeechRecognition.podspec  PermissionHelper.swift
lib/: SpeechRecognitionModule.d.ts  SpeechRecognitionModule.d.ts.map  SpeechRecognitionModule.js  SpeechRecognitionModule.js.map  SpeechRecognitionModule.types.d.ts  SpeechRecognitionModule.types.d.ts.map  SpeechRecognitionModule.types.js  SpeechRecognitionModule.types.js.map  SpeechRecognitionModule.web.d.ts  SpeechRecognitionModule.web.d.ts.map  SpeechRecognitionModule.web.js  SpeechRecognitionModule.web.js.map  WebSpeechRecognition.d.ts  WebSpeechRecognition.d.ts.map  WebSpeechRecognition.js  WebSpeechRecognition.js.map  WebSpeechRecognition.web.d.ts  WebSpeechRecognition.web.d.ts.map  WebSpeechRecognition.web.js  WebSpeechRecognition.web.js.map  index.d.ts  index.d.ts.map  index.js  index.js.map  useSpeechRecognitionEvent.d.ts  useSpeechRecognitionEvent.d.ts.map  useSpeechRecognitionEvent.js  useSpeechRecognitionEvent.js.map
(+16 files in other folders)
